# bpl

./: .env  README.md  celery.py  pyproject.toml  requirements.txt
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
config/: __init__.py  settings.py  urls.py
config/settings/: base.py  development.py  production.py
mailing/: models.py  serializers.py  tasks.py  urls.py  views.py
mailing/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
